--- a/event.html
+++ b/event.html
@@ -80,28 +80,26 @@
                 <ul class="list-unstyled text-end">
                     <li><h1>Träningar</h1></li>
                     <ul>
-                        <li><h4>Ons. Apr 27 Heden #4 16:00-18:30</h4></li>
-                        <li><h4>Mån. Maj 2 Heden #2 16:00-18:30</h4></li>
-                        <li><h4>Ons. Maj 4 Heden #4 16:00-18:30</h4></li>
-                        <li><h4>Mån. Maj 9 Heden #4 17:00-18:30</h4></li>
+                        <h4>Ons. Apr 27 Heden #4 16:00-18:30</h4>
+                        <h4>Mån. Maj 2 Heden #2 16:00-18:30</h4>
+                        <h4>Ons. Maj 4 Heden #4 16:00-18:30</h4>
+                        <h4>Mån. Maj 9 Heden #4 17:00-18:30</h4>
                         <h4>OBS! Tiden</h4>
-                        <li><h4>Ons. Maj 11 Heden #4 16:00-18:30</h4></li>
-                        <li><h4>Mån. Maj 16 Heden #4 16:00-18:30</h4></li>
-                        <li><h4>Ons. Maj 18 Heden #4 16:00-18:30</h4></li>
+                        <h4>Ons. Maj 11 Heden #4 16:00-18:30</h4>
+                        <h4>Mån. Maj 16 Heden #4 16:00-18:30</h4>
+                        <h4>Ons. Maj 18 Heden #4 16:00-18:30</h4>
                         <h4>Ingen Träning Denna Måndag</h4>
-                        <li><h4>Ons. Maj 25 Heden #4 16:00-18:30</h4></li>
-                        <li><h4>Tor. Apr 26 Heden #2 16:00-18:30</h4></li>
+                        <h4>Ons. Maj 25 Heden #4 16:00-18:30</h4>
+                        <h4>Tor. Apr 26 Heden #2 16:00-18:30</h4>
                     </ul>
                 </ul>
             </div>
             <div class="col">
-                <ul class="list-unstyled ">
+                <ul class="list-unstyled">
                     <li><h1>Matcher</h1></li>
-                    <ul>
-                        <li><h4>Lör. Maj 28 Full Träningsmatch mot varandra</h4></li>
-                        <h4>Offense VS Defense</h4>
-                        <h4>Party Efteråt. Plats och mer info kommer senare</h4>
-                    </ul>
+                    <h4>Lör. Maj 28 Full Träningsmatch mot varandra</h4>
+                    <h4>Offense VS Defense</h4>
+                    <h4>Party Efteråt. Plats och mer info kommer senare</h4>
                 </ul>
             </div>
         </div>
